# Raster-Graphics

./: .gitignore  CMakeLists.txt  README.md  feep.pgm  gradient.pgm  gradient1.pgm  main.cpp  peon.ppm
docs/: Doxyfile
docs/html/: AddCommand_8hpp_source.html  CommandFactory_8hpp_source.html  Command_8hpp_source.html  ExitCommand_8hpp_source.html  FlipCommand_8hpp_source.html  GrayscaleCommand_8hpp_source.html  HelpCommand_8hpp_source.html  If-example.html  ImageBase_8hpp_source.html  ImageFactory_8hpp_source.html  Image_8hpp_source.html  Interface_8hpp_source.html  ListCommand_8hpp_source.html  LoadCommand_8hpp_source.html  MonochromeCommand_8hpp_source.html  NegativeCommand_8hpp_source.html  PBM_8hpp_source.html  PGM_8hpp_source.html  PPM_8hpp_source.html  PasteCommand_8hpp_source.html  RedoCommand_8hpp_source.html  RotateCommand_8hpp_source.html  SaveAsCommand_8hpp_source.html  SaveCommand_8hpp_source.html  SessionManager_8hpp_source.html  Session_8hpp_source.html  SnapshotCommand_8hpp_source.html  SwitchCommand_8hpp_source.html  UndoCommand_8hpp_source.html  Utilites_8hpp_source.html  annotated.html  classAddCommand-members.html  classAddCommand.html  classAddCommand__inherit__graph.map  classAddCommand__inherit__graph.md5  classCommand-members.html  classCommand.html  classCommandFactory-members.html  classCommandFactory.html  classCommand__inherit__graph.map  (+170 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+32 more)
docs/latex/: AddCommand_8hpp_source.tex  CommandFactory_8hpp_source.tex  Command_8hpp_source.tex  ExitCommand_8hpp_source.tex  FlipCommand_8hpp_source.tex  GrayscaleCommand_8hpp_source.tex  HelpCommand_8hpp_source.tex  If-example.tex  ImageBase_8hpp_source.tex  ImageFactory_8hpp_source.tex  Image_8hpp_source.tex  Interface_8hpp_source.tex  ListCommand_8hpp_source.tex  LoadCommand_8hpp_source.tex  MonochromeCommand_8hpp_source.tex  NegativeCommand_8hpp_source.tex  PBM_8hpp_source.tex  PGM_8hpp_source.tex  PPM_8hpp_source.tex  PasteCommand_8hpp_source.tex  RedoCommand_8hpp_source.tex  RotateCommand_8hpp_source.tex  SaveAsCommand_8hpp_source.tex  SaveCommand_8hpp_source.tex  SessionManager_8hpp_source.tex  Session_8hpp_source.tex  SnapshotCommand_8hpp_source.tex  SwitchCommand_8hpp_source.tex  UndoCommand_8hpp_source.tex  Utilites_8hpp_source.tex  annotated.tex  classAddCommand.tex  classAddCommand__inherit__graph.md5  classCommand.tex  classCommandFactory.tex  classCommand__inherit__graph.md5  classExitCommand.tex  classExitCommand__inherit__graph.md5  classFlipCommand.tex  classFlipCommand__inherit__graph.md5  (+49 more)
include/controllers/: CommandFactory.hpp  Session.hpp  SessionManager.hpp
include/services/: Utilites.hpp
include/view/: Interface.hpp
src/controllers/: CommandFactory.cpp  Session.cpp  SessionManager.cpp
src/view/: Interface.cpp
(+47 files in other folders)
